--- a/src/webapp/features/rabble/components/Tile.module.css
+++ b/src/webapp/features/rabble/components/Tile.module.css
@@ -3,6 +3,7 @@
   height: 100%;
   position: relative;
   display: inline-block;
+  overflow-y: hidden;
 }
 
 .tileImage {
